Unfinished commit.  Includes the following changes: 1)  Removed all files from the subdirectory ash3dweb_scripts, because they were duplicates of those in scripts. 2)  Modified runAsh3d_*.sh to include modifications for a smaller plume. 3)  Changed scripts/GFSVolc_to_gif_tvar.sh to add VAAC boundaries. 4)  modified makeAsh3dinput1*.f90 to accommodate smaller plumes. 5)  Modified the makefile to ensure that VAAC boundary files in share/post_proc were installed. 6)  Modified runAsh3d_ac.sh to ensure that puff trajectories are not run when the puff executable is not installed.

--- a/src/makefile
+++ b/src/makefile
@@ -260,5 +260,6 @@ install:
 	install -m 644 ../share/readme.pdf                 $(INSTALLDIR)/share/
 	install -m 644 ../share/post_proc/*cpt             $(INSTALLDIR)/share/post_proc/
 	install -m 644 ../share/post_proc/*png             $(INSTALLDIR)/share/post_proc/
+	install -m 644 ../share/post_proc/*xy              $(INSTALLDIR)/share/post_proc/
 	install -m 644 ../share/post_proc/world_cities.txt $(INSTALLDIR)/share/post_proc/
 
