Updated ansible scripts for Redhat and Ubuntu.

--- a/scripts/ash3d_Redhat.yml
+++ b/scripts/ash3d_Redhat.yml
@@ -9,6 +9,10 @@
 #
 ## Add whatever certificate your network needs
 # sudo yum install ca-certificates
+#update-ca-trust force-enable
+#wget http://sslhelp.doi.net/docs/DOIRootCA2.cer
+#cp DOIRootCA2.cer /etc/pki/ca-trust/source/anchors/
+#update-ca-trust extract
 #
 # sudo yum install ansible
 #
@@ -51,7 +55,7 @@
 
     - name: Install build distribution software
       yum:
-        name: git, gcc, gcc-gfortran, gcc-c++, make, lapack, lapack-devel, blas, blas-devel
+        name: git, gcc, gcc-gfortran, gcc-c++, make, lapack*, blas*
         state: latest
 
     - name: Install netcdf and eccodes distribution software
@@ -70,9 +74,11 @@
         state: latest
 
 
+    # git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d-hourssince.git
     - name: Clone volcano-ash3d-hourssince git repository.
       git:
-        repo: 'https://github.com/DOI-USGS/volcano-ash3d-hourssince.git'
+        #repo: 'https://github.com/DOI-USGS/volcano-ash3d-hourssince.git'
+        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d-hourssince.git'
         dest: /home/ash3d/Programs/GIT/volcano-ash3d-hourssince
         accept_hostkey: yes
         force: yes
@@ -82,9 +88,11 @@
     - name: Installing libhourssince
       command: 'make install chdir=/home/ash3d/Programs/GIT/volcano-ash3d-hourssince/'
 
+    # git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d-projection.git
     - name: Clone volcano-ash3d-projection git repository.
       git:
-        repo: 'https://github.com/DOI-USGS/volcano-ash3d-projection.git'
+        #repo: 'https://github.com/DOI-USGS/volcano-ash3d-projection.git'
+        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d-projection.git'
         dest: /home/ash3d/Programs/GIT/volcano-ash3d-projection
         accept_hostkey: yes
         force: yes
@@ -94,9 +102,11 @@
     - name: Installing libprojection
       command: 'make install chdir=/home/ash3d/Programs/GIT/volcano-ash3d-projection/'
 
+    # git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d-metreader.git
     - name: Clone volcano-ash3d-metreader git repository.
       git:
-        repo: 'https://github.com/DOI-USGS/volcano-ash3d-metreader.git'
+        #repo: 'https://github.com/DOI-USGS/volcano-ash3d-metreader.git'
+        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d-metreader.git'
         dest: /home/ash3d/Programs/GIT/volcano-ash3d-metreader
         accept_hostkey: yes
         force: yes
@@ -197,15 +207,15 @@
 #./INSTALL
 ###############################
 #
-###  git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d.git
-#    - name: Clone volcano-ash3d git repository
-#      git:
-##        repo: 'https://github.com/DOI-USGS/volcano-ash3d.git'
-#        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d.git'
-#        dest: /home/ash3d/Programs/GIT/volcano-ash3d
-#        accept_hostkey: yes
-#        force: yes
-#        become_user: ash3d
+#    git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d.git
+    - name: Clone volcano-ash3d git repository
+      git:
+        #repo: 'https://github.com/DOI-USGS/volcano-ash3d.git'
+        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d.git'
+        dest: /home/ash3d/Programs/GIT/volcano-ash3d
+        accept_hostkey: yes
+        force: yes
+        become_user: ash3d
     - name: Building Ash3d
       command: 'make all chdir=/home/ash3d/Programs/GIT/volcano-ash3d/src/'
     - name: Building Ash3d_PostProc
@@ -213,15 +223,15 @@
     - name: Installing Ash3d
       command: 'make install chdir=/home/ash3d/Programs/GIT/volcano-ash3d/src/'
 
-### git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d-web.git
-#    - name: Clone volcano-ash3d_web git repository.
-#      git:
-##        repo: 'https://github.com/DOI-USGS/volcano-ash3d-web.git'
-#        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d-web.git'
-#        dest: /home/ash3d/Programs/GIT/volcano-ash3d-web
-#        accept_hostkey: yes
-#        force: yes
-#      become_user: ash3d
+#    git clone https://code.usgs.gov/vsc/ash3d/volcano-ash3d-web.git
+    - name: Clone volcano-ash3d-web git repository.
+      git:
+        #repo: 'https://github.com/DOI-USGS/volcano-ash3d-web.git'
+        repo: 'https://code.usgs.gov/vsc/ash3d/volcano-ash3d-web.git'
+        dest: /home/ash3d/Programs/GIT/volcano-ash3d-web
+        accept_hostkey: yes
+        force: yes
+      become_user: ash3d
     - name: Building Ash3d_web-master
       command: 'make all chdir=/home/ash3d/Programs/GIT/volcano-ash3d-web/src/'
     - name: Installing Ash3d_web
